--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.5.5",
-    "angularfire": "~1.2.0",
+    "angularfire": "^1.2.0",
     "firebase": "~2.4.2",
     "angular-ui-router": "~0.2.18",
     "bootstrap": "~3.3.6",
